--- a/css/show-food.css
+++ b/css/show-food.css
@@ -1,6 +1,3 @@
-body {
-    background-color: rgba(201, 186, 186, 0);
-}
 
 .top-nav {
     overflow: hidden;
@@ -44,6 +41,7 @@ body {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    border-radius: 6px;
 }
 
 .menu-bar ul li a:hover {
@@ -132,16 +130,19 @@ input[type=submit] {
 .menu-box {
     width: 240px;
     height: fit-content;
-    border-radius: 3px;
+    border-radius: 20px;
     background-color: white;
-    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.6);
     margin: 0 0 15px 0;
+    height: 260px;
 }
 
 .menu-box img {
-    width: 100%;
-    height: 260px;
+    width: 85%;
+    height: 200px;
     border-radius: 3px;
+ 
+    
 }
 
 .menu-box .menu-name {
@@ -149,6 +150,11 @@ input[type=submit] {
     height: fit-content;
     padding: 10px;
 }
+
+.menu-box .menu-name h5 a{
+    font-size: initial;
+}
+
 
 .pagination {
     width: fit-content;
@@ -177,4 +183,40 @@ input[type=submit] {
 .pagination li a {
     text-align: center;
     padding: 10px 10px 10px 10px;
+}
+
+.name-title{
+    padding-left: 12px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+    display: inline-block;
+    font-weight: normal;    
+}
+
+.detail-description{
+    padding-left: 12px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+    display: inline-block;
+    font-weight: normal;    
+}
+
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
+}
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+    transform: scale(1.1);
 }
