--- a/css/show-food.css
+++ b/css/show-food.css
@@ -1,4 +1,3 @@
-
 .top-nav {
     overflow: hidden;
     width: 100%;
@@ -141,8 +140,8 @@ input[type=submit] {
     width: 85%;
     height: 200px;
     border-radius: 3px;
- 
-    
+
+
 }
 
 .menu-box .menu-name {
@@ -151,7 +150,7 @@ input[type=submit] {
     padding: 10px;
 }
 
-.menu-box .menu-name h5 a{
+.menu-box .menu-name h5 a {
     font-size: initial;
 }
 
@@ -185,24 +184,24 @@ input[type=submit] {
     padding: 10px 10px 10px 10px;
 }
 
-.name-title{
+.name-title {
     padding-left: 12px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 100%;
     display: inline-block;
-    font-weight: normal;    
+    font-weight: normal;
 }
 
-.detail-description{
+.detail-description {
     padding-left: 12px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 100%;
     display: inline-block;
-    font-weight: normal;    
+    font-weight: normal;
 }
 
 .hvr-grow {
@@ -219,4 +218,131 @@ input[type=submit] {
 .hvr-grow:focus,
 .hvr-grow:active {
     transform: scale(1.1);
+}
+
+@media (max-width: 1024.99px) {
+    .menu-box {
+        width: 210px;
+        height: fit-content;
+        border-radius: 20px;
+        background-color: white;
+        box-shadow: 0 4px 5px rgb(0 0 0 / 60%);
+        margin: 0 0 15px 0;
+        height: 260px;
+    }
+}
+
+@media (max-width: 768.99px) {
+    .menu-box {
+        width: 150px;
+        height: fit-content;
+        border-radius: 20px;
+        background-color: white;
+        box-shadow: 0 4px 5px rgb(0 0 0 / 60%);
+        margin: 0 0 15px 0;
+        height: 200px;
+    }
+    .menu-box img {
+        width: 85%;
+        height: 140px;
+        border-radius: 3px;
+    }
+    .name-title {
+        padding-left: 4px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100%;
+        display: inline-block;
+        font-weight: normal;
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 425.99px) {
+    .top-nav {
+        overflow: hidden;
+        width: 100%;
+        height: fit-content;
+        margin: 10px 0 10px 0;
+        padding: 0 0px 0 0px;
+    }
+    .menu-bar {
+        width: 100%;
+        padding: 0 0px 0 0px;
+        min-height: 50px;
+    }
+    .search-container {
+        margin: 20px auto 20px auto;
+        width: fit-content;
+        height: fit-content;
+        background-color: white;
+        border: solid;
+        border-width: 0.5px;
+        border-color: #ccc;
+        box-shadow: 0 4px 5px rgb(0 0 0 / 20%);
+        border-radius: 8px;
+    }
+    .menu-box {
+        width: 80px;
+        height: fit-content;
+        border-radius: 20px;
+        background-color: white;
+        box-shadow: 0 4px 5px rgb(0 0 0 / 60%);
+        margin: 0 0 15px 0;
+        height: 135px;
+    }
+    .menu-box img {
+        width: 85%;
+        height: 80px;
+        border-radius: 3px;
+    }
+    .name-title {
+        font-size: 11px;
+        padding-left: 0px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100%;
+        display: inline-block;
+        font-weight: normal;
+    }
+}
+
+@media (max-width: 375.99px) {
+    .top-nav {
+        overflow: hidden;
+        width: 100%;
+        height: fit-content;
+        margin: 10px 0 10px 0;
+        padding: 0px 0px 0 15px;
+    }
+    .menu-box {
+        width: 75px;
+        height: fit-content;
+        border-radius: 20px;
+        background-color: white;
+        box-shadow: 0 4px 5px rgb(0 0 0 / 60%);
+        margin: 0 0 15px 0;
+        height: 135px;
+    }
+    .search-container {
+        margin: 20px auto 20px auto;
+        width: auto;
+        height: fit-content;
+        background-color: white;
+        border: solid;
+        border-width: 0.5px;
+        border-color: #ccc;
+        box-shadow: 0 4px 5px rgb(0 0 0 / 20%);
+        border-radius: 8px;
+    }
+    input[type=text] {
+        width: 365px;
+        height: 25px;
+        padding: 0 0 0 1rem;
+        font-size: 1rem;
+        font-weight: 400;
+        border: none;
+    }
 }
